crates/arrow_tools/src/snapshots/arrow_tools__format__tests__pretty_print_schema.snap
---
source: crates/arrow_tools/src/format.rs
expression: pretty_output
---
 id: int64
 name: utf8 (nullable)
 scores: list<item: float32> (nullable)
 metadata: struct<key utf8, value utf8> (nullable)
